update fitness script