@@ -19,6 +19,7 @@ import org.osgi.service.component.annotations.Deactivate;
 import org.osgi.service.component.annotations.Reference;
 
 import be.iminds.iot.ros.util.RosCommand;
+import be.iminds.iot.ros.util.NativeRosNode.VERBOSITY_LEVELS;
 
 
 @Component(factory = "it.ismb.pert.cpswarm.stageSimulationLauncher.factory"
@@ -29,6 +30,7 @@ public class SimulationLauncher implements Runnable {
 	private String packageName = null;
 	private SimulationManager parent = null;
 	private ComponentInstance commandInstance = null;
+	private RosCommand roslaunch = null;
 	private ComponentFactory rosCommandFactory; // used to roslaunch the simulation
 
 	@Reference(target = "(component.factory=it.ismb.pert.cpswarm.rosCommand.factory)")
@@ -69,15 +71,15 @@ public class SimulationLauncher implements Runnable {
 				props.put("ros.mappings", params);
 			}
 			commandInstance = this.rosCommandFactory.newInstance((Dictionary) props);
-			RosCommand roslaunch = (RosCommand) commandInstance.getInstance();
+			 roslaunch = (RosCommand) commandInstance.getInstance();
+			roslaunch.startSimulation();
 		} catch (Exception e) {
 			e.printStackTrace();
-		} finally {
+		}/* finally {
 			if (commandInstance != null) {
 				commandInstance.dispose();
 			}
-		}
-
+		}*/
 	}
 
 	@Deactivate
@@ -85,36 +87,72 @@ public class SimulationLauncher implements Runnable {
 		if(SimulationManager.CURRENT_VERBOSITY_LEVEL.equals(SimulationManager.VERBOSITY_LEVELS.ALL)) {
 			System.out.println("Simulation launcher is deactived");
 		}
-		Process proc;
-			try {
-			proc = Runtime.getRuntime().exec("killall -9 stageros");
-			proc.waitFor();
-			proc.destroy();
-			proc = null;
-		} catch (IOException | InterruptedException e) {
+		
+	/*	Process proc;
+		try {
+			ProcessBuilder builder = new ProcessBuilder(new String[] { "/bin/bash", "-c", "killall -2 roslaunch"});
+				proc = builder.start();
+				proc.waitFor();
+				proc = null;
+		} catch (Exception e) {
 			e.printStackTrace();
-		}		
+		}
+	
 		try {
 			Thread.sleep(25000);
 		} catch (InterruptedException e1) {
 			e1.printStackTrace();
-		}	
+		}*/
+	/*	if (roslaunch != null) {
+			roslaunch.deactivate();
+		}*/
+		if (commandInstance != null) {
+			commandInstance.dispose();
+		}
+	/*	try {
+			ProcessBuilder builder = new ProcessBuilder(new String[] { "/bin/bash", "-c", "ps -aux; killall -2 stageros; killall -2 python;killall -s SIGINT record"});
+		
+				builder.inheritIO();
+				proc = builder.start();
+				proc.waitFor();
+				proc = null;
+		} catch (Exception e) {
+			e.printStackTrace();
+		}*/
+		Process proc;
 		try {
-			proc = Runtime.getRuntime().exec(new String[] { "/bin/bash", "-c", "killall -9 roslaunch; killall -9 python" });
+			ProcessBuilder builder = new ProcessBuilder(new String[] { "/bin/bash", "-c", "killall -s SIGINT roscore"});	
+				builder.inheritIO();
+				proc = builder.start();
+				proc.waitFor();
+				proc = null;
+		} catch (Exception e) {
+			e.printStackTrace();
+		}
+		
+	/*	
+		
+		try {
+			System.out.println("killing rosnode\n");
+			proc = Runtime.getRuntime().exec(new String[] { "/bin/bash", "-c", "ps -aux;rosnode kill -a; ps -aux;killall -s SIGINT roscore; ps -aux;killall -s SIGINT rosmaster;ps -aux;"});
 			String line="";
 			BufferedReader input =  
 					new BufferedReader  
 					(new InputStreamReader(proc.getInputStream()));  
-			while ((line = input.readLine()) != null) {  
-					System.out.println(line);
-			} 
-			proc.waitFor();
-			proc.destroy();
+			while ((line = input.readLine()) != null) { 
+				//    if(line.contains("record"))
+				    	System.out.println(line);
+			}
+			int exit = proc.waitFor();
+			if(exit!=0)
+				System.out.println("killall -9 python failed");
+		//	proc.destroy;
 			proc = null;
 			input.close();
-		} catch (Exception e1) {
-			e1.printStackTrace();
-		}
+		} catch (IOException | InterruptedException e) {
+			e.printStackTrace();
+		}	*/	
+		
 	}
 
 	public void setCanRun(boolean canRun) {
